[CSS] Fix nesting selector resolution for print https://bugs.webkit.org/show_bug.cgi?id=297232 rdar://158081814

Reviewed by Antti Koivisto.

The boolean parameter to resolve nesting selector only-once is stopping
print style resolution to work properly because the selectors
are considered already resolved.

This patch completely changes the mechanism for the
necessary only-once nesting selector resolution : instead
of using a boolean, it relies on the fact that a style rule selector list
should never be empty : if it's empty, it is
because it has not been resolved yet.

* LayoutTests/fast/css/nested-media-print-expected.html: Added.
* LayoutTests/fast/css/nested-media-print.html: Added.

* Source/WebCore/css/StyleRule.cpp:
(WebCore::StyleRule::debugDescription const):
(WebCore::StyleRuleWithNesting::debugDescription const):

Improve debug logging

(WebCore::StyleRuleWithNesting::StyleRuleWithNesting):
(WebCore::m_originalSelectorList):
(WebCore::StyleRuleBase::invalidateResolvedSelectorListRecursively):

On CSSOM rule mutation, we need to clear all the child selectors because
they are incorrect now. They will be resolved again correctly at rule set building.

* Source/WebCore/css/StyleRule.h:
(WebCore::StyleRule::adoptSelectorList):
(WebCore::StyleRule::wrapperAdoptSelectorList): Deleted.
(WebCore::StyleRuleWithNesting::wrapperAdoptOriginalSelectorList): Deleted.

Create a new inline setter for selector list.
Move wrapper* functions which are used by CSSOM to the .cpp file.

* Source/WebCore/css/StyleSheetContents.cpp:
(WebCore::StyleSheetContents::parserAppendRule):
(WebCore::StyleSheetContents::wrapperInsertRule):

Fix the detection of the selector list component count
to use the original selector list.

* Source/WebCore/style/RuleSetBuilder.cpp:
(WebCore::Style::RuleSetBuilder::RuleSetBuilder):
(WebCore::Style::m_shrinkToFit):
(WebCore::Style::RuleSetBuilder::addChildRule):
(WebCore::Style::RuleSetBuilder::addRulesFromSheetContents):
(WebCore::Style::RuleSetBuilder::resolveSelectorListWithNesting):
(WebCore::Style::RuleSetBuilder::addStyleRuleWithSelectorList):
(WebCore::Style::RuleSetBuilder::addStyleRule):
(WebCore::Style::m_builderShouldResolveNesting): Deleted.
* Source/WebCore/style/RuleSetBuilder.h:
* Source/WebCore/style/StyleScopeRuleSets.cpp:
(WebCore::Style::ScopeRuleSets::appendAuthorStyleSheets):

Remove boolean and resolve nesting selector whenever the selector list is empty.

Canonical link: https://commits.webkit.org/298843@main